# Godot-Test-MCP

./: .gitignore  AGENT.md  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: nl-runtime-gate.yml
frontend/visualizer-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/visualizer-app/src/: main.tsx  styles.css
scripts/: __init__.py  verify_nl_runtime.py
src/: __init__.py  artifact_store.py  config.py  error_parser.py  godot_process.py  injector.py  nl_compiler.py  nl_executor.py  nl_schema.py  server.py  visual_oracle.py  visualizer_bundle.py  visualizer_diff.py  visualizer_edit_session.py  visualizer_i18n.py  visualizer_layout_engine.py  visualizer_live_server.py  visualizer_performance_policy.py  visualizer_renderer.py  visualizer_runtime_mapper.py  visualizer_schema.py  visualizer_service.py  visualizer_static_mapper.py  visualizer_view_model.py  ws_client.py
src/harness/: test_harness.gd
src/visualizer_web/: app.js  i18n.json  index.html  styles.css
src/visualizer_web_dist/: index.html
src/visualizer_web_dist/.vite/: manifest.json
tests/: test_error_parser.py  test_harness_commands.py  test_injector.py  test_nl_compiler.py  test_server_nl_tools.py  test_server_visualizer_tools.py  test_verify_runner_mcp.py  test_verify_runner_unit.py  test_verify_runner_visualizer.py  test_visual_oracle.py  test_visualizer_bundle.py  test_visualizer_diff.py  test_visualizer_edit_session.py  test_visualizer_i18n.py  test_visualizer_layout_engine.py  test_visualizer_offline_export.py  test_visualizer_performance_policy.py  test_visualizer_readability_policy.py  test_visualizer_runtime_mapper.py  test_visualizer_service.py  test_visualizer_static_mapper.py  test_visualizer_view_model.py  test_ws_client.py
verification/checklists/: runtime_gate.json  tech_discovery_gate.json  visualizer_contract.json
verification/scenarios/: core.json  hooked.json  tech_discovery.json  visualizer_core.json  visualizer_live.json
(+20 files in other folders)
