[project]
name = "godot-test-mcp"
version = "0.3.0"
description = "MCP server for automated Godot 4 game testing — launch, run, capture errors"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "hyunlord"}
]
keywords = ["mcp", "godot", "testing", "automation", "gamedev"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/hyunlord/Godot-Test-MCP"
Repository = "https://github.com/hyunlord/Godot-Test-MCP"
Issues = "https://github.com/hyunlord/Godot-Test-MCP/issues"

[project.scripts]
godot-test-mcp = "src.server:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/harness" = "src/harness"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
